# sorobix-api-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: build.yml
docs/: Sorobix-API.postman_collection.json
src/: main.rs
src/handlers/: account_handler.rs  contract_handler.rs  mod.rs
src/log/: mod.rs
src/models/: compile_contract.rs  contract.rs  deploy_contract.rs  fee.rs  generate_account.rs  invoke_contract.rs  mod.rs  response.rs  router_state.rs  websocket_state.rs
src/services/: account_service.rs  application_service.rs  channel_service.rs  contract_compiler.rs  contract_deployer.rs  contract_invoker.rs  contract_service.rs  mod.rs
src/utils/: client.rs  constants.rs  helper.rs  mod.rs  strval.rs  transaction.rs  wasm.rs
utils/: compile_to_wasm.sh  deploy_contract.sh
