[package]
name = "sorobix-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.6.11"
ed25519-dalek = "1.0.1"
rand = "0.7.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
soroban-sdk = "0.6.0"
stellar-strkey = "0.0.7"
tokio = { version = "1.0", features = ["full"] }
