[package]
name = "sorobix-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
axum = "0.6.11"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.82", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.0", features = ["full"] }
soroban-env-host = { features = [
    "vm",
    "serde",
    "hostfn_log_fmt_values",
], version = "0.0.15" }
rand = "0.7.0"
hex = "0.4.3"
sha2 = "0.10.6"
ed25519-dalek = "1.0.1"
soroban-spec = "0.7.0"
soroban-ledger-snapshot = "0.7.0"
stellar-strkey = "0.0.7"
soroban-sdk = "0.7.0"
thiserror = "1.0.31"
itertools = "0.10.5"
jsonrpsee-http-client = "0.15.1"
jsonrpsee-core = "0.15.1"
http = "0.2.9"
serde_derive = "1.0.82"
serde-aux = "4.1.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
wasmparser = "0.90.0"
base64 = "0.13.0"
